ansible-rke2/roles/nextcloud/templates/nextcloud-vs.yml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: nextcloud-vs
  namespace: networking
spec:
  hosts:
    - cloud.moonlightgrove.love
  gateways:
    - networking/galaxia-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: nextcloud.nextcloud.svc.cluster.local
            port:
              number: 80
